# Assignments_8xx

a811/ex_1/: main.cpp
a811/ex_2/: main2.cpp
a811/ex_3/: main3.cpp
a811/ex_4/: main4.cpp
a812/: animal.cpp  animal.h  animals.txt  main.cpp
a821/ex1/: main.cpp
a821/ex2/: helper.h  main2.cpp
a821/ex3/: counter.h  main3.cpp
a823/: grid.h  main.cpp
a831/: cont_test.cpp  container.h  main.cpp
a841/: CMakeLists.txt  main.cpp
a841/include/: container.h
a841/tests/: CMakeLists.txt  cont_test.cpp
a842/: memerror1.cpp  memerror1.h  memerror2.cpp  memerror2.h  memerror3.h  memtest1.cpp  memtest2.cpp  memtest3.cpp  tests.cpp
at2/: deck.h  main.cpp
